welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: overriding method forward in class AbstractBuggle of type (x$1: Int)Unit;
 method forward needs `override' modifier
def forward(n:Int){
    ^